<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="project.mosis.volunteerneeded.MainActivity">

    <item android:id="@+id/add_friend_item" android:title="@string/add_friend"
        android:icon="@drawable/ic_person_add_black_24dp" android:orderInCategory="100" app:showAsAction="always"/>
    <item android:id="@+id/friends_item" android:title="@string/friends"
        android:icon="@drawable/ic_people_black_24dp" android:orderInCategory="100" app:showAsAction="ifRoom"/>
    <item android:id="@+id/search_item" android:title="@string/search"
        android:icon="@drawable/ic_search_black_24dp" android:orderInCategory="100" app:showAsAction="ifRoom"/>
    <item android:id="@+id/add_event_item" android:title="@string/add_event"
        android:icon="@drawable/ic_plus_one_black_24dp" android:orderInCategory="100" app:showAsAction="always"/>
</menu>
